Добален алгоритм импорта данных по дебиторке из 1С, добален алгоритм сортировки и приведение данных по дебиторке к удобному виду, формировка pdf файла для всех менеджеров и клиентов

--- a/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.html
@@ -16,7 +16,7 @@
     <a class="report">Отчёт Номенклатура</a>
     <a class="report">Отчёт Анализ продаж</a>
     <a class="report">Отчёт По опросу</a>
-    <a class="report">Отчёт По дебиторке</a>
+    <a class="report" href="http://localhost:5000/Report?name=AllDebitory">Отчёт По дебиторке</a>
     <select [(ngModel)]="selectedGroup" (change)="selectedWorkGroupChange()">
       <option [ngValue]=-10>Все рабочие групы</option>
       <option *ngFor="let wg of workgroup; let i = index" [ngValue]=i>
