Добален алгоритм импорта данных по по продажам  из 1С, добален алгоритм сортировки и приведение данных по продажам к удобному виду, формировка pdf файла для всех менеджеров и клиентов

--- a/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.html
@@ -14,7 +14,7 @@
     <option [value]="50">Другие</option>
   </select>-->
     <a class="report">Отчёт Номенклатура</a>
-    <a class="report">Отчёт Анализ продаж</a>
+    <a class="report" href="http://localhost:5000/Report?name=AllSalle">Отчёт Анализ продаж</a>
     <a class="report">Отчёт По опросу</a>
     <a class="report" href="http://localhost:5000/Report?name=AllDebitory">Отчёт По дебиторке</a>
     <select [(ngModel)]="selectedGroup" (change)="selectedWorkGroupChange()">
