Добален алгоритм импорта данных по опросам из 1С, добален алгоритм сортировки и приведение данных по опросам к удобному виду, формировка pdf файла для всех менеджеров и клиентов

--- a/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.html
@@ -15,7 +15,7 @@
   </select>-->
     <a class="report">Отчёт Номенклатура</a>
     <a class="report" href="http://localhost:5000/Report?name=AllSalle">Отчёт Анализ продаж</a>
-    <a class="report">Отчёт По опросу</a>
+    <a class="report" href="http://localhost:5000/Report?name=AllOpros">Отчёт По опросу</a>
     <a class="report" href="http://localhost:5000/Report?name=AllDebitory">Отчёт По дебиторке</a>
     <select [(ngModel)]="selectedGroup" (change)="selectedWorkGroupChange()">
       <option [ngValue]=-10>Все рабочие групы</option>
