Добален алгоритм импорта данных по опросам из 1С, добален алгоритм сортировки и приведение данных по опросам к удобному виду, формировка pdf файла для всех менеджеров и клиентов

--- a/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.html
@@ -13,7 +13,7 @@
     <option [value]="40">Рестораны</option>
     <option [value]="50">Другие</option>
   </select>-->
-    <a class="report">Отчёт Номенклатура</a>
+    <a class="report"href="http://localhost:5000/Report?name=AllNomll">Отчёт Номенклатура</a>
     <a class="report" href="http://localhost:5000/Report?name=AllSalle">Отчёт Анализ продаж</a>
     <a class="report" href="http://localhost:5000/Report?name=AllOpros">Отчёт По опросу</a>
     <a class="report" href="http://localhost:5000/Report?name=AllDebitory">Отчёт По дебиторке</a>
