Сформированы отдельные отчёты по долгам, продажам, опросам, номенклатуре для менеджеров

--- a/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.html
@@ -13,10 +13,10 @@
     <option [value]="40">Рестораны</option>
     <option [value]="50">Другие</option>
   </select>-->
-    <a class="report"href="http://localhost:5000/Report?name=AllNomll">Отчёт Номенклатура</a>
-    <a class="report" href="http://localhost:5000/Report?name=AllSalle">Отчёт Анализ продаж</a>
-    <a class="report" href="http://localhost:5000/Report?name=AllOpros">Отчёт По опросу</a>
-    <a class="report" href="http://localhost:5000/Report?name=AllDebitory">Отчёт По дебиторке</a>
+    <a class="report" href="Report?name=AllNomll">Отчёт Номенклатура</a>
+    <a class="report" href="Report?name=AllSalle">Отчёт Анализ продаж</a>
+    <a class="report" href="Report?name=AllOpros">Отчёт По опросу</a>
+    <a class="report" href="Report?name=AllDebitory">Отчёт По дебиторке</a>
     <select [(ngModel)]="selectedGroup" (change)="selectedWorkGroupChange()">
       <option [ngValue]=-10>Все рабочие групы</option>
       <option *ngFor="let wg of workgroup; let i = index" [ngValue]=i>
