--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.sass
@@ -108,6 +108,14 @@ th
         border-radius: 99px
         border: 1px solid #E9F3FF
         margin-bottom: 10px
+    .report
+        margin-right: 20px
+        display: inline-block 
+        padding: 10px 20px
+        border: 1px solid 
+        border-radius: 99px
+        border: 1px solid #E9F3FF
+        margin-bottom: 10px
     select
         width: 245px
         margin-right: 20px
