Сформированы отдельные отчёты по долгам, продажам, опросам, для Клиентов

--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/week-plans/week-plans-dialog.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/week-plans/week-plans-dialog.component.html
@@ -5,8 +5,13 @@
 <mat-dialog-content>
   <span class="numberOfWeek">неделя {{numberOfWeek}}</span>
 
+  <a class="report" href="ReportClienr?name=Nomll&clientId={{data.id}}">Отчёт Номенклатура</a>
+  <a class="report" href="ReportClienr?name=Salle&clientId={{data.id}}">Отчёт Анализ продаж</a>
+  <a class="report" href="ReportClienr?name=Opros&clientId={{data.id}}">Отчёт По опросу</a>
+  <a class="report" href="ReportClienr?name=Debitory&clientId={{data.id}}">Отчёт По дебиторке</a>
+
   <button class="close" (click)="close()"><i class="fas fa-times fa-2x"></i></button>
-  
+
   <div class="dialog-body">
     <div class="dialog-section dialog-left">
       <div class="dialog-section-title">
@@ -17,26 +22,26 @@
           <small>План - Звонки</small>
           <textarea matInput placeholder="Введите план" [(ngModel)]="selectedMSWeek.plan" (focusout)="addNewWeekPlan(selectedMSWeek)">{{selectedMSWeek.plan}}</textarea>
         </div>
-        
-  
+
+
         <div class="fact">
           <small>Факт - Звонки</small>
           <textarea matInput placeholder="Введите факт" [(ngModel)]="selectedMSWeek.fact" (focusout)="addFactToWeekPlan(selectedMSWeek)">{{selectedMSWeek.fact}}</textarea>
         </div>
       </div>
     </div>
-  
+
     <div class="dialog-section dialog-right">
       <div class="dialog-section-title">
-        Региональный сопровождения
+        Региональный Менеджер
       </div>
       <div class="dialog-section-body">
         <div class="planned">
-          <small>План - Звонки/Компания/</small>
+          <small>План - Звонки/Командировка</small>
           <textarea matInput placeholder="Введите план" [(ngModel)]="selectedRMWeek.plan" (focusout)="addNewWeekPlan(selectedRMWeek)">{{selectedRMWeek.plan}}</textarea>
         </div>
         <div class="fact">
-          <small>Факт - Звонки/Компания</small>
+          <small>Факт - Звонки/Командировка</small>
           <textarea matInput placeholder="Введите факт" [(ngModel)]="selectedRMWeek.fact" (focusout)="addFactToWeekPlan(selectedRMWeek)">{{selectedRMWeek.fact}}</textarea>
         </div>
       </div>
@@ -48,11 +53,11 @@
       <thead>
         <tr>
           <th style="background-color: #F1F8FF" width="50"></th>
-          <th style="background-color: #ECF5FF" (click)="setWeeks(1)"><span>Неделя 1  </span> <br /> <span>С {{firstdayOneWeek}} - До {{lastdayOneWeek}}</span></th>
-          <th style="background-color: #EFF6FF" (click)="setWeeks(2)"><span>Неделя 2  </span> <br /> <span>С {{firstdayTwoWeek}} - До {{lastdayTwoWeek}}</span></th>
-          <th style="background-color: #E2F0FF" (click)="setWeeks(3)"><span>Неделя 3  </span> <br /> <span>С {{firstdaythreeWeek}} - До {{lastdaythreeWeek}}</span></th>
-          <th style="background-color: #DBECFF" (click)="setWeeks(4)"><span>Неделя 4  </span> <br /> <span>С {{firstdayFourWeek}} - До {{lastdayFourWeek}}</span></th>
-          <th style="background-color: #D3E8FF" (click)="setWeeks(5)"><span>Неделя 5  </span> <br /> <span>С {{firstdayFiveWeek}} - До {{lastdayFiveWeek}}</span></th>
+          <th style="background-color: #ECF5FF" (click)="setWeeks(1)"><span>Неделя 1  </span> <br /> <span>{{firstdayOneWeek}} - {{lastdayOneWeek}}</span></th>
+          <th style="background-color: #EFF6FF" (click)="setWeeks(2)"><span>Неделя 2  </span> <br /> <span>{{firstdayTwoWeek}} -{{lastdayTwoWeek}}</span></th>
+          <th style="background-color: #E2F0FF" (click)="setWeeks(3)"><span>Неделя 3  </span> <br /> <span>{{firstdaythreeWeek}} - {{lastdaythreeWeek}}</span></th>
+          <th style="background-color: #DBECFF" (click)="setWeeks(4)"><span>Неделя 4  </span> <br /> <span>{{firstdayFourWeek}} - {{lastdayFourWeek}}</span></th>
+          <th style="background-color: #D3E8FF" (click)="setWeeks(5)"><span>Неделя 5  </span> <br /> <span>{{firstdayFiveWeek}} - {{lastdayFiveWeek}}</span></th>
         </tr>
       </thead>
       <tbody>
@@ -87,8 +92,8 @@
       </div>
     </div>
   </div>
-  
- 
+
+
 </mat-dialog-content>
 
 <div class="dialog-actions">
