--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/week-plans/week-plans-dialog.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/week-plans/week-plans-dialog.component.sass
@@ -42,6 +42,14 @@ h3
     margin: 0
     padding: 0
     max-height: 75vh
+    .report
+        margin-right: 20px
+        display: inline-block 
+        padding: 10px 20px
+        border: 1px solid 
+        border-radius: 99px
+        border: 1px solid #E9F3FF
+        margin-bottom: 10px
 
 .dialog-body
     display: grid
