--- a/WebUI/ClientApp/src/app/admin/workgroups/components/workgroups-list/workgroups-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/workgroups/components/workgroups-list/workgroups-list.component.html
@@ -1,6 +1,6 @@
 <mat-card class="mat-elevation-z1">
   <mat-card-header>
-    <mat-card-title class="card-title">Рабочие группы</mat-card-title>
+    <mat-card-title class="card-title">Регионы</mat-card-title>
     <select [(ngModel)]="dateCollection" (ngModelChange)="toFormatDate(dateCollection)">
       <option *ngFor="let dateCollection of dateCollections let i=index">{{dateCollection}}</option>
     </select>
