--- a/WebUI/ClientApp/src/app/admin/workgroups/containers/workgroups-plans/workgroup-plans.component.html
+++ b/WebUI/ClientApp/src/app/admin/workgroups/containers/workgroups-plans/workgroup-plans.component.html
@@ -1,4 +1,5 @@
 <app-workgroup-plans-list
                           [workgroupPlans]="workgroupPlans$ | async"
                           [weekPlans]="weekPlans$ | async"
+                          [workgroups]="workgroups$ | async"
                           ></app-workgroup-plans-list>
