--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
@@ -201,7 +201,7 @@
     </mat-card-content>
     <mat-card-content style="background-color:#f7f7f7">
 
-      <span style="font-family:Roboto,Helvetica Neue,sans-serif;font-size:14pt;margin:15px;">С рекордной отгрузкой</span>
+      <span style="font-family:Roboto,Helvetica Neue,sans-serif;font-size:14pt;margin:15px;">С редкой отгрузкой</span>
       <table mat-table [dataSource]="recordShipment" [trackBy]="getTrackBy">
 
         <ng-container matColumnDef="title">
