--- a/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.html
@@ -70,7 +70,7 @@
     <mat-card-content style="background-color:#f7f7f7">
       <!--<mat-paginator [length]="recordShipmentLength" [pageSize]="10" [pageSizeOptions]="[10]">
       </mat-paginator>-->
-      <span style="font-family:Roboto,Helvetica Neue,sans-serif;font-size:14pt;margin:15px;">С рекордной отгрузкой</span>
+      <span style="font-family:Roboto,Helvetica Neue,sans-serif;font-size:14pt;margin:15px;">С редкой отгрузкой</span>
       <table mat-table [dataSource]="recordShipment" [trackBy]="getTrackBy">
 
         <ng-container matColumnDef="title">
