Догрузка имен владельца телефона клиента и показывание на странице клиента у админа

--- a/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/clients/components/client-list/client-list.component.html
@@ -39,7 +39,7 @@
 
         <ng-container matColumnDef="phone">
           <th mat-header-cell *matHeaderCellDef>Телефон</th>
-          <td mat-cell *matCellDef="let element">{{element.phones[0]?.phone}} </td>
+          <td mat-cell *matCellDef="let element">{{element.phones[0]?.phone}} {{element.contactName}}</td>
         </ng-container>
 
         <ng-container matColumnDef="clientType">
@@ -80,7 +80,7 @@
 
         <ng-container matColumnDef="phone">
           <th mat-header-cell *matHeaderCellDef>Телефон</th>
-          <td mat-cell *matCellDef="let element">{{element.phones[0]?.phone}} </td>
+          <td mat-cell *matCellDef="let element">{{element.phones[0]?.phone}} {{element.contactName}}</td>
         </ng-container>
 
         <ng-container matColumnDef="clientType">
@@ -121,7 +121,7 @@
 
         <ng-container matColumnDef="phone">
           <th mat-header-cell *matHeaderCellDef>Телефон</th>
-          <td mat-cell *matCellDef="let element">{{element.phones[0]?.phone}} </td>
+          <td mat-cell *matCellDef="let element">{{element.phones[0]?.phone}} {{element.contactName}}</td>
         </ng-container>
 
         <ng-container matColumnDef="clientType">
@@ -162,7 +162,7 @@
 
         <ng-container matColumnDef="phone">
           <th mat-header-cell *matHeaderCellDef>Телефон</th>
-          <td mat-cell *matCellDef="let element">{{element.phones[0]?.phone}} </td>
+          <td mat-cell *matCellDef="let element">{{element.phones[0]?.phone}} {{element.contactName}}</td>
         </ng-container>
 
         <ng-container matColumnDef="clientType">
@@ -203,7 +203,7 @@
 
         <ng-container matColumnDef="phone">
           <th mat-header-cell *matHeaderCellDef>Телефон</th>
-          <td mat-cell *matCellDef="let element">{{element.phones[0]?.phone}} </td>
+          <td mat-cell *matCellDef="let element">{{element.phones[0]?.phone}} {{element.contactName}}</td>
         </ng-container>
 
         <ng-container matColumnDef="clientType">
@@ -244,7 +244,7 @@
 
         <ng-container matColumnDef="phone">
           <th mat-header-cell *matHeaderCellDef>Телефон</th>
-          <td mat-cell *matCellDef="let element">{{element.phones[0]?.phone}} </td>
+          <td mat-cell *matCellDef="let element">{{element.phones[0]?.phone}} {{element.contactName}}</td>
         </ng-container>
 
         <ng-container matColumnDef="clientType">
@@ -286,7 +286,7 @@
 
         <ng-container matColumnDef="phone">
           <th mat-header-cell *matHeaderCellDef>Телефон</th>
-          <td mat-cell *matCellDef="let element">{{element.phones[0]?.phone}} </td>
+          <td mat-cell *matCellDef="let element">{{element.phones[0]?.phone}} {{element.contactName}}</td>
         </ng-container>
 
         <ng-container matColumnDef="clientType">
