--- a/WebUI/ClientApp/src/app/admin/clients/dialogs/edit-client-dialog/edit-client-dialog.component.html
+++ b/WebUI/ClientApp/src/app/admin/clients/dialogs/edit-client-dialog/edit-client-dialog.component.html
@@ -1,4 +1,4 @@
-<h3 class="dialog-title" mat-dialog-title>Изменение карточку клиента</h3>
+<h3 class="dialog-title" mat-dialog-title>Измененить карточку клиента</h3>
 <button class="close" (click)="close()"><i class="fas fa-times fa-2x"></i></button>
 
 
