--- a/WebUI/ClientApp/src/app/admin/managers/components/managers-list/managers-list.component.html
+++ b/WebUI/ClientApp/src/app/admin/managers/components/managers-list/managers-list.component.html
@@ -13,10 +13,16 @@
         <th mat-header-cell *matHeaderCellDef> Пароль </th>
         <td mat-cell *matCellDef="let row"> {{row.password}} </td>
       </ng-container>
+      <ng-container matColumnDef="role">
+        <th mat-header-cell *matHeaderCellDef>Роль</th>
+        <td mat-cell *matCellDef="let row">
+          {{row.typeManager}}
+        </td>
+      </ng-container>
       <ng-container matColumnDef="workgroupTitle">
         <th mat-header-cell *matHeaderCellDef> Рабочая группа </th>
-        <td mat-cell *matCellDef="let row">  
-            {{row.workgroupTitle}}
+        <td mat-cell *matCellDef="let row">
+          {{row.workgroupTitle}}
         </td>
       </ng-container>
       <ng-container matColumnDef="phone">
@@ -24,11 +30,11 @@
         <td mat-cell *matCellDef="let row"> {{row.phone}} </td>
       </ng-container>
       <ng-container matColumnDef="action">
-          <th mat-header-cell *matHeaderCellDef></th>
-          <td mat-cell *matCellDef="let row">
-            <button class="detail" (click)="openManagerDetail(row)" >Подробнее</button>
-          </td>
-        </ng-container>
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let row">
+          <button class="detail" (click)="openManagerDetail(row)">Подробнее</button>
+        </td>
+      </ng-container>
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
