--- a/WebUI/ClientApp/src/app/admin/managers/dialogs/edit-manager-dialog/edit-manager-dialog.component.html
+++ b/WebUI/ClientApp/src/app/admin/managers/dialogs/edit-manager-dialog/edit-manager-dialog.component.html
@@ -14,11 +14,24 @@
   <div class="form-group">
     <label for="">Номер телефона</label>
     <input placeholder="Телефон" [(ngModel)]="data.phone" [ngModelOptions]="{standalone: true}">
-  </div>      
+  </div>
+  <div class="form-group">
+    <label for="">Тип менеджера</label>
+    <select [(ngModel)]="data.typeManager" [ngModelOptions]="{standalone: true}">
+      <option [value]="2">
+        Менеджр
+      </option>
+      <option [value]="3">
+        Маркетолог
+      </option>
+      <option [value]="4">
+        Проверяющий звонков
+      </option>
+    </select>
+  </div>
   </form>
   
   <div class="dialog-actions">
     <button color="primary" mat-raised-button (click)="save()">Сохранить</button>
     <button mat-raised-button (click)="close()">Закрыть</button>
   </div>
-  
