--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.sass
@@ -53,6 +53,17 @@ th
 .mat-card
     padding: 0px
     padding-bottom: 20px
+    .archiv
+        width: 130px
+        height: 40px
+        border: 1px solid 
+        border-radius: 99px
+        border: 1px solid #E9F3FF
+        text-transform: uppercase
+        color: #4d73a4
+        font-weight: bold
+        font-size: 20px
+        margin-top: 20px  
 
 .card-title
     padding: 40px 10px
