--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/week-plans/week-plans-dialog.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/week-plans/week-plans-dialog.component.html
@@ -47,7 +47,16 @@
       </div>
     </div>
   </div>
-
+  <div class="dialog-Resume">
+    <div class="dialog-section-title">
+      Резюме
+    </div>
+    <div class="dialog-section-body">
+      <div class="planned">
+        <textarea matInput placeholder="Резюме"></textarea>
+      </div>
+    </div>
+  </div>
   <div style="display:flex">
     <table style="margin-bottom: 40px">
       <thead>
@@ -79,18 +88,7 @@
         </tr>
       </tbody>
     </table>
-    <div>
-      <div class="dialog-section">
-        <div class="dialog-section-title1" style="background-color:#D3E8FF">
-          Резюме
-        </div>
-        <div class="dialog-section-body1" style="background: rgba(222, 237, 255, 0.2)">
-          <div class="planned">
-            <textarea matInput placeholder="Введите резюме"></textarea>
-          </div>
-        </div>
-      </div>
-    </div>
+
   </div>
 
 
