--- a/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/week-plans/week-plans-dialog.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/dialogs/week-plans/week-plans-dialog.component.sass
@@ -50,6 +50,23 @@ h3
         border-radius: 99px
         border: 1px solid #E9F3FF
         margin-bottom: 10px
+.dialog-Resume
+    width: 100%
+    .dialog-section-title
+        background-color: #E2F7FF
+        font-size: 18px
+        padding: 25px 20px
+    .dialog-section-body
+        padding: 20px 15px
+        small
+            color: #A3BEBE
+            border-bottom: 1px solid #A3BEBE
+        textarea
+            margin-top: 12px
+            min-height: 98px
+            font-size: 14px
+        .planned
+            position: relative
 
 .dialog-body
     display: grid
@@ -61,6 +78,7 @@ h3
         .dialog-section-title
             background-color: #E2F7FF
             color: #89B4C5
+
 
 .dialog-section
     min-width: 200px
