Доработан Алгоритм подтверждения звонков,  добален новый тип аккаунта (Контролер), добалена сновая страница с менеджерами и всем подтверждеными звонками менеджеров, добалены алгоритмы сортировок по звонкам развития и подтвержденым звонкам, добалена функция скачивания аудио звонка в срм для каждого у контролера, верстка страници контролепа

--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.sass
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.sass
@@ -33,6 +33,13 @@ th
     border-bottom: none
     color: #000000 !important
 
+.nameManager
+    position: absolute
+    right: 200px
+    top: 40px
+    color: #4d73a4
+    font-size: 20px
+    bottom: 15px
 .addEntity
     position: absolute
     right: 20px
