--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
@@ -1,6 +1,7 @@
 <mat-card class="mat-elevation-z1">
   <mat-card-header>
     <mat-card-title class="card-title">Клиенты</mat-card-title>
+    <span class="nameManager">{{manager.login}}</span>
     <select class="archiv" [(ngModel)]="dateCollection" (ngModelChange)="toFormatDate(dateCollection)">
       <option *ngFor="let dateCollection of dateCollections">{{dateCollection}}</option>
     </select>
@@ -32,7 +33,6 @@
     </select>
     <input (keyup)="applyFilter($event.target.value)" placeholder="Поиск">
   </div>
-
   <div [hidden]="hidenDivFull">
     <mat-card-content style="background-color:#f7f7f7">
 
