--- a/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/dashboard/components/dashboard-panel/dashboard-panel.component.html
@@ -57,6 +57,13 @@
             <td>{{setManagertCallMonth()}}</td>
             <td>{{setManagerCall()}}</td>
           </tr>
+          <tr>
+            <td style="background-color:#fcfcfc; max-width:50px !important">Звонки подтвержденые контролером</td>
+            <td>{{setAceepControlerCallDays()}}</td>
+            <td>{{setAceepControlerCallWeek()}}</td>
+            <td>{{setAceepControlerCallMonth()}}</td>
+            <td>{{setAceepControlerCall()}}</td>
+          </tr>
         </tbody>
       </table>
   </mat-card>
