Сборка wwwroot, билд ангуляра

--- a/WebUI/ClientApp/src/app/сontroler/clients/components/acceptManager/acceptManager.component.html
+++ b/WebUI/ClientApp/src/app/сontroler/clients/components/acceptManager/acceptManager.component.html
@@ -17,7 +17,7 @@
 
         <ng-container matColumnDef="phone">
           <th mat-header-cell *matHeaderCellDef>Номер телефона клиента</th>
-          <td mat-cell *matCellDef="let element" style="max-width: 300px">{{element.phone}} Сек</td>
+          <td mat-cell *matCellDef="let element" style="max-width: 300px">{{element.phone}}</td>
         </ng-container>
 
         <ng-container matColumnDef="duration">
