Маркетологу запрещено менять всё, добалены в учёт формулам на странице с регинами

--- a/WebUI/ClientApp/src/app/manager-any/clients/dialogs/calls-dates-dialog/calls-dates-dialog.component.html
+++ b/WebUI/ClientApp/src/app/manager-any/clients/dialogs/calls-dates-dialog/calls-dates-dialog.component.html
@@ -63,7 +63,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
   <div class="dialog-actions">
-    <button color="primary" mat-raised-button (click)="save()">Сохранить</button>
+    <!--<button color="primary" mat-raised-button (click)="save()">Сохранить</button>-->
     <button mat-raised-button (click)="close()">Закрыть</button>
   </div>
 </mat-dialog-content>
