--- a/WebUI/ClientApp/src/app/manager-any/clients/dialogs/create-client-dialog/create-client-dialog.component.html
+++ b/WebUI/ClientApp/src/app/manager-any/clients/dialogs/create-client-dialog/create-client-dialog.component.html
@@ -77,7 +77,7 @@
   </form>
   
   <div class="dialog-actions">
-    <button color="primary" mat-raised-button (click)="save()">Сохранить</button>
+    <!--<button color="primary" mat-raised-button (click)="save()">Сохранить</button>-->
     <button mat-raised-button (click)="close()">Закрыть</button>
   </div>
   
