--- a/WebUI/ClientApp/src/app/manager-any/clients/dialogs/client-phones/client-phones.component.html
+++ b/WebUI/ClientApp/src/app/manager-any/clients/dialogs/client-phones/client-phones.component.html
@@ -17,7 +17,7 @@
 
   
 <div class="dialog-actions">
-  <button color="primary" mat-raised-button (click)="save()">Сохранить</button>
+  <!--<button color="primary" mat-raised-button (click)="save()">Сохранить</button>-->
   <button mat-raised-button (click)="close()">Закрыть</button>
 </div>
   
