Добалена новая страница для избраных клиентов, добалена возможность перемещения клиента в избраные клиенты , разширена база даных для этой пометки что клмент избраный или нет

--- a/WebUI/ClientApp/src/app/manager-rm/manager-rm.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/manager-rm.component.html
@@ -4,8 +4,9 @@
   </div>
   <nav>
     <ul>
-      <li><a routerLink="dashboard" routerLinkActive="active">Главная</a></li>    
-      <li><a routerLink="clients" routerLinkActive="active">Клиенты</a></li>      
+      <li><a routerLink="dashboard" routerLinkActive="active">Главная</a></li>
+      <li><a routerLink="clients" routerLinkActive="active">Клиенты</a></li>
+      <li><a routerLink="ReachOutcomes" routerLinkActive="active">Результативность по "охвату"</a></li>
     </ul>
   </nav>
 
