--- a/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
+++ b/WebUI/ClientApp/src/app/manager-rm/clients/components/client-list/client-list.component.html
@@ -39,27 +39,32 @@
       <span style="font-family:Roboto,Helvetica Neue,sans-serif;font-size:14pt;margin:15px;">Актуальные</span>
       <table mat-table [dataSource]="actual" [trackBy]="getTrackBy">
 
-        <ng-container matColumnDef="title" >
+        <ng-container matColumnDef="elect">
+          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Избранный</th>
+          <td [attr.colspan]="1" mat-cell *matCellDef="let element" style="color: #324A60"> <input (click)="checkFluency(element)" *ngIf="!element.isCoverage" type="checkbox" />  <input (click)="checkFluency(element)"  *ngIf="element.isCoverage" checked type="checkbox" /> </td>
+        </ng-container>
+
+        <ng-container matColumnDef="title">
           <th [attr.colspan]="3" mat-header-cell *matHeaderCellDef>Название</th>
           <td [attr.colspan]="3" mat-cell *matCellDef="let element" style="color: #324A60">{{element.title}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="phone" >
+        <ng-container matColumnDef="phone">
           <th [attr.colspan]="3" mat-header-cell *matHeaderCellDef>Телефон</th>
           <td [attr.colspan]="3" mat-cell *matCellDef="let element">{{element.phones[0]?.phone}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="type" >
+        <ng-container matColumnDef="type">
           <th [attr.colspan]="2" mat-header-cell *matHeaderCellDef>Тип</th>
           <td [attr.colspan]="2" mat-cell *matCellDef="let element">{{element.clientType | clientTypeTranslate}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="legalEntity" >
+        <ng-container matColumnDef="legalEntity">
           <th [attr.colspan]="6" mat-header-cell *matHeaderCellDef>Юр. лицо</th>
           <td [attr.colspan]="6" mat-cell *matCellDef="let element">{{element.legalEntity}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="numberOfCalls" >
+        <ng-container matColumnDef="numberOfCalls">
           <th [attr.colspan]="2" mat-header-cell *matHeaderCellDef>Звонки</th>
           <td [attr.colspan]="2" mat-cell *matCellDef="let element">{{element.numberOfCalls | numberOfCallsTranslate}} </td>
         </ng-container>
@@ -69,7 +74,7 @@
           <td [attr.colspan]="2" mat-cell *matCellDef="let element">{{element.numberOfShipments | numberOfShipmentsTranslate}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="nomenclatureAnalysis" >
+        <ng-container matColumnDef="nomenclatureAnalysis">
           <th [attr.colspan]="2" mat-header-cell *matHeaderCellDef>Номен-ра</th>
           <td [attr.colspan]="2" mat-cell *matCellDef="let element" (click)="openNomenclatureAnalysis(element)">
             <div class="bar-shadow">
@@ -84,21 +89,21 @@
         </ng-container>
 
         <!--<ng-container matColumnDef="revenueAnalysis">
-        <th mat-header-cell *matHeaderCellDef>Выручка</th>
-        <td mat-cell *matCellDef="let element"
-        (click)="openRevenueAnalysis(element)">
-        <div class="bar-shadow">
-            <div class="bar"
-            [style.background-color]="getAnalysisProps(getAvgAnalysis(element.revenueAnalysis)).background"
-            [style.color]="getAnalysisProps(getAvgAnalysis(element.revenueAnalysis)).font"
-            [style.width.px]="getAnalysisProps(getAvgAnalysis(element.revenueAnalysis)).width">
-              <b>
-                {{getAvgAnalysis(element.revenueAnalysis)}}%
-              </b>
-            </div>
+    <th mat-header-cell *matHeaderCellDef>Выручка</th>
+    <td mat-cell *matCellDef="let element"
+    (click)="openRevenueAnalysis(element)">
+    <div class="bar-shadow">
+        <div class="bar"
+        [style.background-color]="getAnalysisProps(getAvgAnalysis(element.revenueAnalysis)).background"
+        [style.color]="getAnalysisProps(getAvgAnalysis(element.revenueAnalysis)).font"
+        [style.width.px]="getAnalysisProps(getAvgAnalysis(element.revenueAnalysis)).width">
+          <b>
+            {{getAvgAnalysis(element.revenueAnalysis)}}%
+          </b>
         </div>
-      </td>
-      </ng-container>-->
+    </div>
+  </td>
+  </ng-container>-->
 
         <ng-container matColumnDef="callPlan.collective">
           <th mat-header-cell *matHeaderCellDef style="background-color: #fdf6fd">План</th>
@@ -173,7 +178,7 @@
         <ng-container matColumnDef="filler">
           <th mat-header-cell *matHeaderCellDef
               [style.text-align]="center"
-              [attr.colspan]="18"
+              [attr.colspan]="19"
               style="background-color: #fff"></th>
         </ng-container>
 
@@ -207,6 +212,11 @@
 
       <span style="font-family:Roboto,Helvetica Neue,sans-serif;font-size:14pt;margin:15px;">С редкой отгрузкой</span>
       <table mat-table [dataSource]="recordShipment" [trackBy]="getTrackBy">
+
+        <ng-container matColumnDef="elect">
+          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Избранный</th>
+          <td [attr.colspan]="1" mat-cell *matCellDef="let element" style="color: #324A60"> <input (click)="checkFluency(element)" *ngIf="!element.isCoverage" type="checkbox" />  <input (click)="checkFluency(element)" *ngIf="element.isCoverage" checked type="checkbox" /> </td>
+        </ng-container>
 
         <ng-container matColumnDef="title">
           <th [attr.colspan]="3" mat-header-cell *matHeaderCellDef>Название</th>
@@ -270,7 +280,11 @@
   </ng-container>-->
 
         <ng-container matColumnDef="callPlan.collective">
-          <th mat-header-cell *matHeaderCellDef style="background-color: #fdf6fd">План</th>
+          <th mat-header-cell *matHeaderCellDef style="background-color: #fdf6fd">fd
+План
+          tC</th>
+          fd
+          tC
           <td mat-cell *matCellDef="let element">{{element.callPlan?.totalCalls}} </td>
         </ng-container>
 
@@ -377,6 +391,12 @@
       <span style="font-family:Roboto,Helvetica Neue,sans-serif;font-size:14pt;margin:15px;">Рестораны</span>
       <table mat-table [dataSource]="restaurants" [trackBy]="getTrackBy">
 
+
+        <ng-container matColumnDef="elect">
+          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Избранный</th>
+          <td [attr.colspan]="1" mat-cell *matCellDef="let element" style="color: #324A60"> <input (click)="checkFluency(element)" *ngIf="!element.isCoverage" type="checkbox" />  <input (click)="checkFluency(element)" *ngIf="element.isCoverage" checked type="checkbox" /> </td>
+        </ng-container>
+
         <ng-container matColumnDef="title">
           <th [attr.colspan]="3" mat-header-cell *matHeaderCellDef>Название</th>
           <td [attr.colspan]="3" mat-cell *matCellDef="let element" style="color: #324A60">{{element.title}} </td>
@@ -439,7 +459,11 @@
   </ng-container>-->
 
         <ng-container matColumnDef="callPlan.collective">
-          <th mat-header-cell *matHeaderCellDef style="background-color: #fdf6fd">План</th>
+          <th mat-header-cell *matHeaderCellDef style="background-color: #fdf6fd">Пл
+ан
+          lD</th>
+          Пл
+          lD
           <td mat-cell *matCellDef="let element">{{element.callPlan?.totalCalls}} </td>
         </ng-container>
 
@@ -546,6 +570,11 @@
       <span style="font-family:Roboto,Helvetica Neue,sans-serif;font-size:14pt;margin:15px;">Новые или реанимируемые</span>
       <table mat-table [dataSource]="newOrResuscitating" [trackBy]="getTrackBy">
 
+        <ng-container matColumnDef="elect">
+          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Избранный</th>
+          <td [attr.colspan]="1" mat-cell *matCellDef="let element" style="color: #324A60"> <input (click)="checkFluency(element)" *ngIf="!element.isCoverage" type="checkbox" />  <input (click)="checkFluency(element)" *ngIf="element.isCoverage" checked type="checkbox" /> </td>
+        </ng-container>
+
         <ng-container matColumnDef="title">
           <th [attr.colspan]="3" mat-header-cell *matHeaderCellDef>Название</th>
           <td [attr.colspan]="3" mat-cell *matCellDef="let element" style="color: #324A60">{{element.title}} </td>
@@ -608,7 +637,11 @@
   </ng-container>-->
 
         <ng-container matColumnDef="callPlan.collective">
-          <th mat-header-cell *matHeaderCellDef style="background-color: #fdf6fd">План</th>
+          <th mat-header-cell *matHeaderCellDef style="background-color: #fdf6fd">Пл
+ан
+          lD</th>
+          Пл
+          lD
           <td mat-cell *matCellDef="let element">{{element.callPlan?.totalCalls}} </td>
         </ng-container>
 
@@ -714,6 +747,12 @@
       <span style="font-family:Roboto,Helvetica Neue,sans-serif;font-size:14pt;margin:15px;">Другие</span>
       <table mat-table [dataSource]="other" [trackBy]="getTrackBy">
 
+
+        <ng-container matColumnDef="elect">
+          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Избранный</th>
+          <td [attr.colspan]="1" mat-cell *matCellDef="let element" style="color: #324A60"> <input (click)="checkFluency(element)" *ngIf="!element.isCoverage" type="checkbox" />  <input (click)="checkFluency(element)" *ngIf="element.isCoverage" checked type="checkbox" /> </td>
+        </ng-container>
+
         <ng-container matColumnDef="title">
           <th [attr.colspan]="3" mat-header-cell *matHeaderCellDef>Название</th>
           <td [attr.colspan]="3" mat-cell *matCellDef="let element" style="color: #324A60">{{element.title}} </td>
@@ -776,7 +815,11 @@
   </ng-container>-->
 
         <ng-container matColumnDef="callPlan.collective">
-          <th mat-header-cell *matHeaderCellDef style="background-color: #fdf6fd">План</th>
+          <th mat-header-cell *matHeaderCellDef style="background-color: #fdf6fd">Пл
+ан
+          lD</th>
+          Пл
+          lD
           <td mat-cell *matCellDef="let element">{{element.callPlan?.totalCalls}} </td>
         </ng-container>
 
@@ -882,6 +925,12 @@
       <span style="font-family:Roboto,Helvetica Neue,sans-serif;font-size:14pt;margin:15px;">Неопределен</span>
       <table mat-table [dataSource]="notDetermined" [trackBy]="getTrackBy">
 
+
+        <ng-container matColumnDef="elect">
+          <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Избранный</th>
+          <td [attr.colspan]="1" mat-cell *matCellDef="let element" style="color: #324A60"> <input (click)="checkFluency(element)" *ngIf="!element.isCoverage" type="checkbox" />  <input (click)="checkFluency(element)" *ngIf="element.isCoverage" checked type="checkbox" /> </td>
+        </ng-container>
+
         <ng-container matColumnDef="title">
           <th [attr.colspan]="3" mat-header-cell *matHeaderCellDef>Название</th>
           <td [attr.colspan]="3" mat-cell *matCellDef="let element" style="color: #324A60">{{element.title}} </td>
@@ -944,7 +993,11 @@
   </ng-container>-->
 
         <ng-container matColumnDef="callPlan.collective">
-          <th mat-header-cell *matHeaderCellDef style="background-color: #fdf6fd">План</th>
+          <th mat-header-cell *matHeaderCellDef style="background-color: #fdf6fd">Пл
+ан
+          lD</th>
+          Пл
+          lD
           <td mat-cell *matCellDef="let element">{{element.callPlan?.totalCalls}} </td>
         </ng-container>
 
@@ -1054,6 +1107,12 @@
 
         <table mat-table [dataSource]="dataSource" [trackBy]="getTrackBy">
 
+
+          <ng-container matColumnDef="elect">
+            <th [attr.colspan]="1" mat-header-cell *matHeaderCellDef>Избранный</th>
+            <td [attr.colspan]="1" mat-cell *matCellDef="let element" style="color: #324A60"> <input (click)="checkFluency(element)" *ngIf="!element.isCoverage" type="checkbox" />  <input (click)="checkFluency(element)" *ngIf="element.isCoverage" checked type="checkbox" /> </td>
+          </ng-container>
+
           <ng-container matColumnDef="title">
             <th [attr.colspan]="3" mat-header-cell *matHeaderCellDef>Название</th>
             <td [attr.colspan]="3" mat-cell *matCellDef="let element" style="color: #324A60">{{element.title}} </td>
@@ -1116,7 +1175,11 @@
   </ng-container>-->
 
           <ng-container matColumnDef="callPlan.collective">
-            <th mat-header-cell *matHeaderCellDef style="background-color: #fdf6fd">План</th>
+            <th mat-header-cell *matHeaderCellDef style="background-color: #fdf6fd">">
+План
+            tC</th>
+            ">
+            tC
             <td mat-cell *matCellDef="let element">{{element.callPlan?.totalCalls}} </td>
           </ng-container>
 
